--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -11,3 +11,11 @@
 .turn-highlight{
     color: white;
 }
+
+.reset{
+    padding: '1rem';
+    color: white;
+    background-color: var(--resetGreen);
+    border-radius: 10px;
+    border: none;
+}
